# djangocourse

./: pyproject.toml
tests/: test_djangocourse.py
